welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value Maths
	(Maths.abs(10-a),Maths.abs(10-b)) match {
         ^close10:2: error: not found: value Maths
	(Maths.abs(10-a),Maths.abs(10-b)) match {
                         ^close10:3: error: value < is not a member of Any
		case (x,y) if (x<y)	=> return a
                                ^close10:4: error: value > is not a member of Any
		case (x,y) if (x>y)	=> return b
                                ^