welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	(Maths.abs(10-a),Maths.abs(10-b)) match {
		case (x,y) if (x<y)	=> return a
		case (x,y) if (x>y)	=> return b
		case (_,_)		=> return 0
	}
}